tests/type_check/error_span/structured_goto_undefined_target_at_terminator_span.err.expected
error: at 4:17: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': goto targets undefined block 'missing_label'
   |
 4 |                 goto missing_label
   |                 ^^^^^^^^^^^^^^^^^^
