tests/type_check/error_span/structured_goto_undefined_target_at_terminator_span.sim

        fn f() {
              entry:
                goto missing_label
            }